--- a/src/app/ui/components/cart/cart.component.html
+++ b/src/app/ui/components/cart/cart.component.html
@@ -84,7 +84,7 @@
                 </button>
               </div>
 
-              <button class="remove-button" (click)="removeCartItem(cartItem.cartItemId)">
+              <button class="remove-button" (click)="removeCartItem(cartItem.cartItemId)" style="color: #e53935;">
                 <i class="fas fa-trash"></i>
               </button>
             </div>
