--- a/src/app/ui/components/category/category.component.scss
+++ b/src/app/ui/components/category/category.component.scss
@@ -299,12 +299,6 @@ $link-color: #0000ee;
   }
 }
 
-mat-paginator {
-  padding-bottom: 55.5px !important;
-  margin-top: 1rem;
-  background-color: $background-color;
-}
-
 .category-header {
   display: flex;
   justify-content: space-between;
@@ -343,4 +337,12 @@ mat-paginator {
       }
     }
   }
+}
+
+@media (prefers-color-scheme: dark) {
+  
+  .mat-mdc-paginator{
+    background-color: #1a1a1a;
+  }
+  
 }
