--- a/src/app/ui/components/login/login.component.html
+++ b/src/app/ui/components/login/login.component.html
@@ -15,7 +15,7 @@
         <input #txtUsernameOrEmail type="text" 
                class="form-control" 
                id="usernameOrEmail" 
-               placeholder="Username or Email"
+               placeholder=" "
                required>
         <label for="usernameOrEmail">Username or Email</label>
       </div>
@@ -24,7 +24,7 @@
         <input #txtPassword type="password" 
                class="form-control" 
                id="password" 
-               placeholder="Password"
+               placeholder=" "
                required>
         <label for="password">Password</label>
       </div>
