--- a/src/app/ui/components/search-results/search-results.component.scss
+++ b/src/app/ui/components/search-results/search-results.component.scss
@@ -129,3 +129,10 @@ mat-paginator {
     margin-top: 1rem;
   }
 }
+@media (prefers-color-scheme: dark) {
+  
+  .mat-mdc-paginator{
+    background-color: #1a1a1a;
+  }
+  
+}
