--- a/src/app/ui/components/brand/brand.component.scss
+++ b/src/app/ui/components/brand/brand.component.scss
@@ -338,3 +338,37 @@ button.liked {
     }
   }
 }
+
+@media (prefers-color-scheme: dark) {
+  .category-header p {
+    color: $light-text;
+    &::after {
+      background-image: linear-gradient(
+          to bottom,
+          rgba(12, 108, 212, 0),
+          rgba(35, 41, 50, 0.15) 37%
+        ),
+        linear-gradient(to bottom, #0066cc, #0066cc);
+    }
+  }
+
+  .mat-mdc-paginator {
+    background-color: #1a1a1a !important;
+    
+  }
+
+  .category-card {
+    background-color: $home-secondary-color;
+    .category-content {
+      color: $light-text;
+    }
+
+    .category-title {
+      color: $home-primary-color;
+    }
+
+    .btn-category {
+      background-color: darken($home-primary-color, 10%);
+    }
+  }
+}
