--- a/src/app/ui/components/product/product-card/product-card.component.html
+++ b/src/app/ui/components/product/product-card/product-card.component.html
@@ -1,35 +1,37 @@
-<div class="product-card" [routerLink]="['/product', product.id]">
-  <div class="product-image">
-    <img [src]="product.showcaseImage?.url || 'assets/default-product-image.jpg'" 
-         [alt]="product.name">
-    <button class="heart-icon" 
-            [class.liked]="product.isLiked" 
-            (click)="onLikeClick($event)">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" 
-           stroke="currentColor" stroke-width="2" 
-           stroke-linecap="round" stroke-linejoin="round">
-        <path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"></path>
-      </svg>
-    </button>
-  </div>
+<div class="product-card" 
+         [class.grid-view]="gridView"
+         [routerLink]="['/product', product.id]">
+      <div class="product-image">
+        <img [src]="product.showcaseImage?.url || 'assets/default-product-image.jpg'" 
+             [alt]="product.name">
+        <button class="heart-icon" 
+                [class.liked]="product.isLiked" 
+                (click)="onLikeClick($event)">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" 
+               stroke="currentColor" stroke-width="2" 
+               stroke-linecap="round" stroke-linejoin="round">
+            <path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"></path>
+          </svg>
+        </button>
+      </div>
 
-  <div class="product-info">
-    <div class="name-title">
-      <div class="brand-name">{{product.brandName}}</div>
-      <div class="product-name">{{product.name}}</div>
+      <div class="product-info">
+        <div class="name-title">
+          <div class="brand-name">{{product.brandName}}</div>
+          <div class="product-name">{{product.name}}</div>
+        </div>
+        <p class="product-title">{{product.title}}</p>
+        <p class="product-price">{{formatCurrency(product.price)}}</p>
+        <p class="product-features">
+          <ng-container *ngFor="let feature of product.productFeatureValues; let last = last">
+            {{feature.featureValueName}}{{!last ? ', ' : ''}}
+          </ng-container>
+        </p>
+      </div>
+
+      <button class="product-add-to-cart-button" 
+              [disabled]="product.stock <= 0"
+              (click)="onAddToCart($event)">
+        {{product.stock > 0 ? 'Add to Cart' : 'Out of Stock'}}
+      </button>
     </div>
-    <p class="product-title">{{product.title}}</p>
-    <p class="product-price">{{formatCurrency(product.price)}}</p>
-    <p class="product-features">
-      <ng-container *ngFor="let feature of product.productFeatureValues; let last = last">
-        {{feature.featureValueName}}{{!last ? ', ' : ''}}
-      </ng-container>
-    </p>
-  </div>
-
-  <button class="product-add-to-cart-button" 
-          [disabled]="product.stock <= 0"
-          (click)="onAddToCart($event)">
-    {{product.stock > 0 ? 'Add to Cart' : 'Out of Stock'}}
-  </button>
-</div>
