--- a/src/app/ui/components/product/product-detail/product-detail.component.scss
+++ b/src/app/ui/components/product/product-detail/product-detail.component.scss
@@ -29,7 +29,7 @@ $link-color: #0000ee;
 .product-detail-container {
   display: flex;
   max-width: 1200px;
-  min-height: 690px;
+  //min-height: 690px;
   margin: 0.5rem auto;
   padding: 0 1rem;
   gap: 2rem;
@@ -77,17 +77,17 @@ $link-color: #0000ee;
 
 .ivirzivir {
   width: 230px;
-  height: 600px;
+  //height: 600px;
 }
 
 .product-image-gallery {
   flex: 1;
   width: 420px;
-  height: 600px;
+  //height: 600px;
   
   .main-image {
     width: 420px;
-    height: 600px;
+    height: 420px;
     position: relative;
     margin-bottom: 1rem;
     border: 1px solid $border-color;
@@ -386,9 +386,11 @@ $link-color: #0000ee;
     }
   }
 }
-
+.products{
+  padding-bottom: 35px;
+}
 .random-products {
-  margin: 2rem auto;
+  margin: 0rem auto;
   max-width: 1320px;
   padding-top: 2rem;
   
@@ -881,10 +883,6 @@ $link-color: #0000ee;
       width: 100%;
     }
 
-    .ivirzivir {
-      width: 100%;
-      height: auto;
-    }
   }
 
   @media (max-width: 768px) {
