--- a/src/app/ui/components/unauthorized/unauthorized.component.html
+++ b/src/app/ui/components/unauthorized/unauthorized.component.html
@@ -1,5 +1,5 @@
 <div class="unauthorized-container">
-    <h1>Erişim Yetkiniz Yok</h1>
-    <p>Bu sayfaya erişim izniniz bulunmamaktadır.</p>
-    <a routerLink="/">Ana Sayfaya Dön</a>
+    <h1>You Don't Have Access</h1>
+    <p>You do not have permission to access this page.</p>
+    <a routerLink="/">Return Homepage</a>
   </div>
